# api-scrum

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: google_sheet_authenticator.rs  mod.rs
src/interface/: crudy.rs  mod.rs
src/model/: epic.rs  mod.rs  product_backlog.rs  project.rs  response.rs  spreadsheet.rs  sprint.rs  user_story.rs
src/service/: epic.rs  mod.rs  product_backlog.rs  project.rs  spreadsheet.rs  sprint.rs  user_story.rs
src/util/: cons.rs  mod.rs  util.rs
