[package]
name = "little_things"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
async-trait = "0.1.88"
dotenv = "0.15.0"
google-sheets4 = "*"
hyper-rustls = "0.27.5"
lazy_static = "1.5.0"
rustls = { version = "0.23.26", features = ["ring"] }
serde = "1.0.219"
serde_json = "1.0.140"
